Animal_shelter/force-app/main/default/objects/Home_Information__c/Home_Information__c.object-meta.xml
<CustomObject>
    <label>Home Information</label>
    <pluralLabel>Home Information Records</pluralLabel>
    <nameField>
        <displayFormat>HI-{0000}</displayFormat>
        <label>Home Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>