Animal_shelter/force-app/main/default/objects/Home_Information__c/fields/Adopter__c.field-meta.xml
<CustomField>
    <fullName>Adopter__c</fullName>
    <label>Adopter</label>
    <referenceTo>Adopter__c</referenceTo>
    <relationshipLabel>Home Information Records</relationshipLabel>
    <relationshipName>Home_Information_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>