Animal_shelter/force-app/main/default/objects/Home_Information__c/fields/Has_Yard__c.field-meta.xml
<CustomField>
    <fullName>Has_Yard__c</fullName>
    <label>Has Yard</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>