Animal_shelter/force-app/main/default/objects/Home_Information__c/fields/Renting__c.field-meta.xml
<CustomField>
    <fullName>Renting__c</fullName>
    <label>Renting</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>