Animal_shelter/force-app/main/default/objects/Home_Information__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>House</fullName>
        </value>
        <value>
            <fullName>Apartment</fullName>
        </value>
        <value>
            <fullName>Condo</fullName>
        </value>
        <value>
            <fullName>Acreage</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>